=Upcoming=
* Age of Wonders II: Added GoG info
* Age of Wonders: Shadow Magic - Added more GoG info
* Depserados - Added GoG info
* Dungeon Keeper II - Added more GoG info
* Far Cry 3 - Contributed by thereid84
* Hotline Miami - Added GoG info
* In Cold Blood
* Jack Orlando: Director's Cut
* Lords of the Realm III
* Populous 2
* Populous: The Beginning
* Runaway 2 - Added GoG info
* Stronghold - Deprecated old save locations, moved to dcuments folder
* SpecOps: The Update - Contributed by Arc Angel
=1/5/2013=
* Atlantis: The Lost Tales
* Atlantis II: Beyond Atlantis
* Atlantis III: The New World
* Carmageddon
* Carmageddon Splat Pack
* Closure - Steam only
* The Dark Eye - Chains of Satinav
* Dungeon Defenders - Added support for non-steam copies
* Enda & Harvey: The Breakout
* Harvey's New Eyes
* Iron Brigade
* Mutant Mudds
* NecroVisioN - Contributed by simtech76
* Oddworld: Stranger's Wrath HD
* Perimiter
* Return to Mysterious Island
* Rochard - Steam Cloud
* Snapshot
* Splice - Steam Cloud
* Star Wars: Tie Fighter - Contributed by Jason Lambert
* Unmechanical
* Warhammer 40,000: Dawn Of War GOTY - Added Steam support
* Wing Commander: The Secret Missions 2: Crusade
* Wing Commenter II: Special Operations 1
* Wing Commenter II: Special Operations 2
* Wizorb - Steam cloud
* Zen Bound 2 - Steam Cloud
Contributed by Arc Angel:
* Deadlight
* Dishonored
* Hotline Miami
* Realm of Ancient War
* Retro City Rampage

Contributed by AdmiringWorm
* 4x4 Hummer - Added Settings type and added new Registry key
* A.I.M. Racing - Added new Registry key
* Angels Online - Updated Settings Type
* APB Reloaded - Added Steam registry key
* Aquaria - Added Steam registry key
* Art of Murder - FBI Confidential
* Ben There, Dan That! - Added Settings type and added Steam Registry path
* Bobby
* Bounce!
* Call of Duty - Added Steam Registry path
* Call of Duty 2 - Added Steam Registry path
* Call of Duty 4: Modern Warfare - Added Steam Registry path